syntax = "proto3";

package account;

option go_package = "services/auth/proto;proto";

message UserLoginEvent {
  uint64 uid = 1;
  string login_ip = 2;
  int64 login_time = 3;
  string os_name = 4;
  string os_version = 5;
  string client_platform = 6;
}
